--- a/seajs/1.3.0/package.json
+++ b/seajs/1.3.0/package.json
@@ -1,1 +1,1 @@
-{"root":"https://raw.github.com/seajs/seajs/master/dist/","name":"sea","version":"1.3.0"}
+{"root":"", "name":"seajs","version":"1.3.0"}
